--- a/static/global.css
+++ b/static/global.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 .logoHead{
     font-family: Eurostile Extd;
     font-size: 14px;
@@ -13,7 +14,7 @@ body{
 
 @font-face{
     font-family: "Eurostile Extd";
-    src: url("font/eurostile.ttf") format("truetype");
+    src: url("font/Eurostile-Extd-Regular.ttf") format("truetype");
 }
 
 @font-face {
@@ -33,11 +34,11 @@ body{
 
 @font-face {
     font-family: "Eurostile Extd Bold";
-    src: url("font/eurostileextendedblack.ttf") format("truetype");
+    src: url("font/Eurostile-Extd-Black.ttf") format("truetype");
 }
 
 .abtHead{
-    font-family: Eurostile Extd;
+    font-family: Eurostile Extd Bold;
     font-size: 60px;
     font-weight: 900;
     line-height: 71.11px;
@@ -46,7 +47,7 @@ body{
 }
 
 .abtSubtitle{
-    font-family: SF Pro;
+    font-family: "Nunito Sans", sans-serif;
     font-size: 37.54px;
     font-weight: 400;
     line-height: 56.28px;
@@ -61,7 +62,7 @@ body{
     height: 40px;
     display: flex;
     align-items: center;
-    font-family: SF Pro;
+    font-family: "Nunito Sans", sans-serif;
 }
 .searchAdv{
     width: 335px;
@@ -80,10 +81,30 @@ body{
     overflow: auto;
 }
 
+.heroInfo{
+    width: 204px;
+    height: 120px;
+    padding: 11px 12px 0px 12px;
+    border-radius: 8px;
+    box-shadow: 4px 4px 21.7px 0px #00000087
+}
+
 @media screen and (max-width: 768px){
     .common-container
     {
         padding: 18px !important;
+    }
+    .common-heading{
+        font-size: 20px !important;
+    }
+    .common-description{
+        font-size: 14px !important;
+    }
+    .tile-label{
+        font-size: 14px !important;
+    }
+    .tile-value{
+        font-size: 16px !important;
     }
     .menu{
         display: block !important;
@@ -123,10 +144,22 @@ body{
         letter-spacing: 0.03em !important;
 
     }
+    .teamHead{
+        font-size: 20px !important;
+    }
+    .teamName{
+        font-size: 20px !important;
+    }
+    .teamRole{
+        font-size: 14px !important;
+    }
+    .footerTitle{
+        font-size: 16px !important;
+    }
 }
 
 .aboutDetailDescription{
-    font-family: SF Pro;
+    font-family: "Nunito Sans", sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
@@ -152,7 +185,7 @@ body{
 }
 
 .common-heading{
-    font-family: SF Pro;
+    font-family: "Nunito Sans", sans-serif;
     font-size: 24px;
     font-weight: 700;
     line-height: 20px;
@@ -161,7 +194,7 @@ body{
 }
 
 .common-description{
-    font-family: SF Pro;
+    font-family: "Nunito Sans", sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
@@ -174,7 +207,7 @@ body{
 }
 
 .tile-label{
-    font-family: SF Pro;
+    font-family: "Nunito Sans", sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 14px;
@@ -215,7 +248,7 @@ body{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    font-family: SF Pro;
+    font-family: "Nunito Sans", sans-serif;
     font-size: 24px;
     height: 100%;
     font-weight: 700;
@@ -259,7 +292,7 @@ body{
 }
 
 .fundSubHead{
-    font-family: SF Pro;
+    font-family: "Nunito Sans", sans-serif;
     font-size: 14px;
     font-weight: 500;
     line-height: 14px;
@@ -302,7 +335,7 @@ body{
     background-image: repeating-linear-gradient(0deg, #333333, #333333 1px, transparent 1px, transparent 40px),repeating-linear-gradient(-90deg, #333333, #333333 1px, transparent 1px, transparent 40px);
 }
 .teamHead{
-    font-family: Eurostile Extd;
+    font-family: Eurostile Extd Bold;
     font-size: 30px;
     font-weight: 900;
     line-height: 40px;
@@ -311,15 +344,15 @@ body{
 }
 
 .teamTile{
-    width: 296px;
-    height: 387px;
+    width: 395px;
+    height: 187px;
     padding: 20.1px 19.62px 23.24px 20.1px;
     border-radius: 20px;
     background-color: white;
 }
 
 .teamDetail{
-    font-family: SF Pro;
+   font-family: "Nunito Sans", sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 22px;
@@ -328,7 +361,7 @@ body{
 }
 
 .getInTouch{
-    font-family: SF Pro;
+   font-family: "Nunito Sans", sans-serif;
     font-size: 14px;
     font-style: italic;
     font-weight: 300;
@@ -338,8 +371,8 @@ body{
 }
 
 .teamImg{
-    width: 256px;
-    height: 256px;
+    /* width: 256px;
+    height: 256px; */
     border-radius: 10px;
     /* border: 1px solid black; */
 }
@@ -354,7 +387,7 @@ body{
 }
 
 .teamRole{
-    font-family: SF Pro;
+   font-family: "Nunito Sans", sans-serif;
     font-size: 20px;
     font-weight: 500;
     line-height: 26.13px;
@@ -384,7 +417,7 @@ body{
 }
 
 .contactMail{
-    font-family: SF Pro;
+   font-family: "Nunito Sans", sans-serif;
     font-size: 20px;
     font-weight: 300;
     line-height: 24px;
@@ -393,7 +426,7 @@ body{
 }
 
 .copyrightText{
-    font-family: SF Pro;
+   font-family: "Nunito Sans", sans-serif;
     font-size: 14px;
     font-style: italic;
     font-weight: 300;
