fix prioirty 1 bugs

--- a/static/global.css
+++ b/static/global.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 .logoHead{
-    font-family: Eurostile Extd;
+    font-family: Eurostile Extd Bold;
     font-size: 14px;
     font-weight: 500;
     line-height: 14px;
