remove console logs

--- a/static/global.css
+++ b/static/global.css
@@ -472,7 +472,7 @@ letter-spacing: 0.03em;
 }
 
 .teamName{
-    font-family: "Nuni Sans", sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-size: 24px;
     font-weight: 500;
     line-height: 26.13px;
