--- a/static/global.css
+++ b/static/global.css
@@ -245,8 +245,7 @@ letter-spacing: 0.03em;
     width: 225px;
     height: 48px;
     border-radius: 30px;
-    border: 1px solid black !important;;
-    opacity: 0px;
+    border: 1px solid black !important;
     font-family: Eurostile Extd;
     font-size: 16px;
     font-weight: 500;
